# preservemyvoice

./: .env.example  .gitignore  PROJECT_SUMMARY.md  README.md  pyproject.toml
frontend/: index.html
src/preservemyvoice/: __init__.py  __main__.py  config.py  exceptions.py  logging.py
src/preservemyvoice/adapters/: __init__.py
src/preservemyvoice/api/: api.py
src/preservemyvoice/domain/: __init__.py
src/preservemyvoice/services/: __init__.py  audio_processor.py  tts_engine.py  voice_cloner.py
tests/unit/: test_config.py  test_services.py
