[project]
name = "preservemyvoice"
version = "0.1.0"
description = "Open source voice banking for people at risk of losing their ability to speak"
requires-python = ">=3.13"
dependencies = [
    "pydantic-settings>=2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "python-multipart>=0.0",
    "numpy>=2.0",
    "scipy>=1.13",
    "soundfile>=0.12",
    "librosa>=0.11",
    "pydub>=0.25.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-mock>=3.14",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 88
target-version = "py313"
fix = true
show-fixes = true
output-format = "grouped"
exclude = [
    ".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg",
    ".ipynb_checkpoints", ".mypy_cache", ".nox", ".pants.d", ".pyenv",
    ".pytest_cache", ".pytype", ".ruff_cache", ".svn", ".tox", ".venv",
    ".vscode", "__pypackages__", "_build", "buck-out", "build", "dist",
    "node_modules", "site-packages", "venv",
]

[tool.ruff.lint]
select = [
    "F", "E", "W", "I", "N", "UP", "B", "S", "A", "C4",
    "T10", "SIM", "TCH", "ARG", "PTH", "ERA", "PL", "RUF", "PERF", "FBT",
]
ignore = ["E501", "S101", "COM812", "ISC001"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101", "SLF001", "ARG001"]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.flake8-type-checking]
strict = true
quote-annotations = true

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["pydantic.Field"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.pytest.ini_options]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks integration tests",
]
